[package]
name = "sp1-guest"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
sp1-zkvm = "5.0.5"

# Ream dependencies
ream-consensus = { git = "https://github.com/syjn99/ream", package = "ream-consensus", rev = "50d148b9b0f6f6064dbe3803515f1e10ead93d42", features = [
    "zkvm",
] }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" } # Extends 2^29 to 2^40 list root
